# drill

./: Cargo.toml  main.rs
asset/: mod.rs
game/: context.rs  fs_switch.rs  game.rs  time.rs
input/: axis.rs  input.rs  value.rs
lib/lib_app/: Cargo.toml
lib/lib_app/src/: lib.rs  runner.rs
lib/lib_gpu/: Cargo.toml
lib/lib_gpu/src/: lib.rs
lib/lib_input/: Cargo.toml
lib/lib_input/proc_macros/: Cargo.toml
lib/lib_input/proc_macros/src/: lib.rs
lib/lib_input/src/: axis.rs  button.rs  lib.rs  value.rs
lib/lib_math/: Cargo.toml
lib/lib_math/src/: lib.rs
lib/lib_renderer/: Cargo.toml
lib/lib_renderer/src/: dyn_quad_buffer.rs  lib.rs  quad_buffer.rs  quad_shader.wgsl  shader.wgsl  upscale_shader.wgsl
lib/lib_window/: Cargo.toml
lib/lib_window/src/: input.rs  lib.rs
renderer/: render_buffer.rs  render_frame.rs
src/: app.rs  input.rs  main.rs
src/game/: mod.rs
src/input/: button.rs  mod.rs  stick_handler.rs
src/renderer/: mod.rs  render.wgsl  render_layer.rs  renderer.rs  upscale.wgsl
